# tenzor_test_project

./: .gitignore  README.md  pyproject.toml  requirements.txt
page_objects/: __init__.py  contacts_page.py  download_page.py  main_page.py  tenzor_page.py
tests/: test_scenario_1.py  test_scenario_2.py  test_scenario_3.py  test_tenzor.py
