[tool.poetry]
name = "tenzor_test_project"
version = "0.1.0"
description = ""
authors = ["«Selezneva <petrukhina.marina2011@yandex.ru>"]

[tool.poetry.dependencies]
python = "^3.10"
selenium = "^4.19.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
